--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/desktop.css">
+    <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/mobile.css">
     
     <script src="./js/index.js"></script>
     <title>Document</title>
@@ -14,7 +17,6 @@
 <body>
     <header>
         <section id="container">
-            <img src="" alt="">
             <h1>SOS</h1>
         </section>
         <nav>
