--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/desktop.css">
-    <link rel="stylesheet" href="./css/tablet.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/desktop.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+
     <script src="./js/index.js"></script>
-    <title>Document</title>
-</head>
+    <title>SOS Enchente</title>
+  </head>
 
-<body>
+  <body>
     <header>
-        <section id="container">
-            <h1>SOS</h1>
-        </section>
-        <nav>
-
-        </nav>
+      <section id="container">
+        <h1>SOS ENCHENTE</h1>
+      </section>
     </header>
+
     <main>
-
+        <section id="subtext">
+            <h3>de oque você necessita?</h3>
+        </section>
+      <section id="container">
+        <div class="item">
+          <img class="item-img" src="./img/icons8-donation.png" />
+          <span id="item-text">Doar</span>
+        </div>
+        <div class="item">
+          <img class="item-img" src="./img/icons8-flag.png" />
+          <span id="item-text">Auxilio</span>
+        </div>
+        <div class="item">
+          <img class="item-img" src="./img/icons8-virus.png" />
+          <span id="item-text">Doenças</span>
+        </div>
+        <div class="item">
+          <img class="item-img" src="./img/icons8-map.png" />
+          <span id="item-text">Areas Afetadas</span>
+        </div>
+      </section>
     </main>
+
     <footer>
-
+      <p>&copy; Victor Marin 2024</p>
     </footer>
-</body>
-
+  </body>
 </html>
